--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -45,6 +45,7 @@ label {
     /*color: #FFF;*/
     -webkit-transform: rotateX(180deg);
     transform: rotateY(180deg);
+    pointer-events: all;
 }
 label:hover .card {
 
@@ -110,6 +111,7 @@ label:hover :checked + .card {
     height: 130px;
     position: relative;
     display: grid;
+    font-size: 40px;
     /* text-align: center; */
     align-content: center;
 }
@@ -117,7 +119,7 @@ label:hover :checked + .card {
 .card-verb {
     font-family: Roboto;
     font-weight: normal;
-    font-size: 40px;
+    /*font-size: 40px;*/
     line-height: 54px;
     color: #1F3541;
     text-align: center;
